# corpus_tryout

./: .gitignore  analyze_data.ipynb  extract_correct_participles.ipynb  extraction_adverbial_participles.ipynb  extraction_gerunzius.ipynb  functions_gensim.py  functions_simalign.py  functions_stanza.py  gensim_experiments.ipynb  investigate_tagging_gerunziu.ipynb  kontext.ipynb  pyproject.toml  stanza_experiments.ipynb
