[project]
name = "corpus-tryout"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Christopher"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "stanza (>=1.11.0,<2.0.0)",
    "simalign (>=0.4,<0.5)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "nbstripout (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
